--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,35 +5,39 @@
 }
 
 body{
-	background-color: none;
-	font-family: 'Open Sans', sans-serif;
-	color: #333333;
+	background-color: #e25164;
+	font-family: 'Raleway', sans-serif;
+	color: white;
 }
 
 nav{
-	width: 100%;
-	height: auto;
-	position: fixed;
-	padding: 25px 0px 25px 0px;
-	margin-bottom: 50px;
-	transition-duration: 400ms;
-}
-
-nav:hover{
-	padding-top: 50px;
-	background-color: #fafafa
+	width: 25%;
+	float: left;
+	height: 100vh;
+	display: inline-block;
+	/*position: relative;*/
 }
 
 #navContainer{
-	width: 80%;
-	height: auto;
-	margin: 0 auto;
+	text-align: center;
+	width: 100%;
 }
 
-#masterContainer{
-	width: 80%;
-	margin: 0 auto;
-	padding-top: 120px;
+#contentContainer{
+	width: 75%;
+	float: right;
+	height: 100vh;
+	position: fixed;
+	right: 0;
+	top: 0;
+}
+
+#detailsOverlay{
+	width: 100%;
+	height: 0%;
+	transition-duration: 700ms;
+	overflow: hidden;
+	background-color: #df3f53;
 }
 
 ul{
@@ -56,20 +60,151 @@ h1{
 	text-align: center;
 }
 
-p{
-	width: 50%;
+
+#nameList{
+	padding-bottom: 50px;
+}
+
+.listName{
+	font-size: 1.1em;
+	letter-spacing: 5px;
+	position: relative;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	z-index: 3;
+	cursor: pointer;
+	transition-duration: 300ms;
+}
+
+.listName:hover{
+	background-color: #e97f8c;
+}
+
+#logoContainer{
+	padding-top: 30px;
+	padding-bottom: 10px;
+	top: 0;
+	position: fixed;
+	width: 25%;
+	margin-bottom: 50px;
+	background-color: #db2940;
+	z-index: 200;
+}
+
+#logo{
+	max-width: 180px;
+}
+
+#navLabel{
+	font-size: 1.2em;
+	font-weight: 500;
+	letter-spacing: 4px;
+	margin-bottom: 10px;
+	margin-top: 150px;
+}
+
+#navFixedBackground{
+	position: fixed;
+	background-color: #db2940;
+	width: 25%;
+	height: 100vh;
+	z-index: -1;
+	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1); 
+}
+
+.navHoverBlock{
+	opacity: 0.9;
+	height: 100%;
+	width: 0px;
+	position: absolute;
+	display: inline-block;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	background-color: white;
+	transition-duration: 400ms;
+}
+
+#backToTop{
+	color: white;
+	text-align: center;
+	width: 200px;
+	margin: 0 auto;
+	padding: 10px 0px 10px 0px;
+	border-radius: 4px;
+	border: 2px solid white;
+	letter-spacing: 2px;
+	margin-bottom: 50px;
+	cursor: pointer;
+	transition-duration: 300ms;
+	position: relative;
+	overflow: hidden;
+}
+
+.buttonHoverBlock{
+	position: absolute;
+	height: 100%;
+	width: 0px;
+	background-color: white;
+	top: 0;
+	left: 0;
+	transition-duration: 300ms;
+	z-index: -1;
+}
+
+#details{
+	width: 90%;
 	margin: 0 auto;
 	text-align: center;
 }
 
-.navItem{
-	display: inline-block;
-	float: right;
-	margin-left: 50px;
-	font-size: 0.9em;
-	cursor: pointer;
+#placeName{
+	font-size: 3.2em;
+	letter-spacing: 7px;
+	margin-right: -7px;
+	margin-top: 30px;
+	margin-bottom: 10px;
+	clear: both;
+	font-weight: 400;
 }
 
-#navLogo{
-	float: left;
+#placeAbout{
+	width: 70%;
+	font-size: 1.2em;
+	margin: 0 auto;
+	font-weight: 300;
+	margin-bottom: 20px;
+	letter-spacing: 1px;
+	clear: both;
 }
+
+#placeImage{
+	width: 100px;
+	height: 100px;
+	border-radius: 100%;
+	background-color: white;
+	margin: 0 auto;
+	clear: both;
+}
+
+#closeButton{
+	margin-bottom: 50px;
+	cursor: pointer;
+	clear: both;
+}
+
+#placeAddress{
+	display: inline-block;
+	padding: 40px;
+	letter-spacing: 3px;
+	font-size: 1.2em;
+}
+
+#placePhone{
+	display: inline-block;
+	padding: 40px;
+	letter-spacing: 3px;
+	font-size: 1.2em;
+}
+
+
