--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,6 +40,12 @@ nav{
 	background-color: #df3f53;
 }
 
+h2{
+	letter-spacing: 4px;
+	font-weight: 500;
+	font-size: 1.4em;
+}
+
 ul{
 	list-style-type: none;
 }
@@ -108,7 +114,7 @@ h1{
 	background-color: #db2940;
 	width: 25%;
 	height: 100vh;
-	z-index: -1;
+	z-index: -100;
 	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1); 
 }
 
@@ -211,4 +217,20 @@ h1{
 	font-size: 1.5em;
 }
 
+#studentNames{
+}
+
+#studentChoices{
+	margin-top: 150px;
+	display: none;
+}
+
+#studentImage{
+	max-width: 100px;
+}
+
+#studentName{
+	margin-top: 10px;
+	margin-bottom: 20px;
+}
 
